# webhooks

./: .gitignore  LICENSE  README.md  env.template  filtering-use-cases.md  pyproject.toml  swagger.json  test_webhook_crud.py  webhook-example.md
docs/: webhooks-general-guide.md  webhooks-guide.md  webhooks-testing-guide.md  webhooks.md
docs/no-toc/: README-no-toc.md  webhooks-general-guide-no-toc.md  webhooks-guide-no-toc.md  webhooks-testing-guide-no-toc.md
docs/prompts/: initial-prompt.md  test-prompt.md
examples/: create_delete_webhook.ipynb  create_webhook.ipynb
src/app/: __init__.py  credo_client_lite.py
src/tests/: test_webhook_crud.py
tests/: test_webhook_crud.py
webhooks/: credo_client.py  credo_client_lite.py
