[tool.poetry]
name = "credo-webhooks-client"
version = "0.1.0"
description = "Lightweight Python client for managing webhooks with the Credo AI API"
authors = ["Nick Cemenenkoff <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "credo_webhooks_client" }]
# Replace `credo_webhooks_client` with your actual source directory name

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
